update treasure items to modern paper